# on-proving-pairings

./: Cargo.toml  README.md  REFERENCES.md
groth16-verifier/: Cargo.toml
groth16-verifier/src/: dummy_circuit.rs  lib.rs  test.rs
on-proving-pairings/: Cargo.toml  README.md
on-proving-pairings/src/: lambda_residues.rs  lib.rs  params.rs  prover.rs  setup.rs  utils.rs  verifier.rs
poc/: Cargo.toml
poc/src/: constants.rs  lib.rs  miller_lines.rs  optimal_ate.rs  pairing_verifier.rs  utils.rs
