[package]
name = "groth16_verifier"
version = "0.1.0"
edition = "2021"
description = "Groth16 verifier with `on proving pairing`"

[dependencies]
ark-ff = {workspace = true }
ark-ec = {workspace = true }
ark-serialize = {workspace = true }
ark-poly ={workspace = true }
ark-std = {workspace = true }
ark-relations = {workspace = true }
ark-crypto-primitives = {workspace = true }

num-bigint ={workspace = true }
num-traits ={workspace = true }
once_cell = {workspace = true }
ark-bn254 = {workspace = true }
rand ={workspace = true }
rand_chacha = {workspace = true }
itertools ={workspace = true }

on-proving-pairings = {workspace = true }
ark-groth16 = {workspace = true }
