[package]
name = "on-proving-pairings"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-ff = {workspace = true }
ark-ec = {workspace = true }
ark-serialize = {workspace = true }
ark-std = {workspace = true }
ark-bn254 = {workspace = true }

num-bigint ={workspace = true }
num-traits ={workspace = true }
once_cell = {workspace = true }
rand ={workspace = true }
rand_chacha = {workspace = true }
itertools ={workspace = true }

