[package]
name = "on-proving-pairings"
version = { workspace = true }
edition = { workspace = true }
license = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
categories = { workspace = true }
description = "An implementation of the On Proving Pairings"
keywords = [ "pairings", "cryptography" ]
include = ["Cargo.toml", "src", "LICENSE-APACHE", "LICENSE-MIT"]


[dependencies]
ark-ff = {workspace = true }
ark-ec = {workspace = true }
ark-serialize = {workspace = true }
ark-std = {workspace = true }
ark-bn254 = {workspace = true }

num-bigint ={workspace = true }
num-traits ={workspace = true }
once_cell = {workspace = true }
rand ={workspace = true }
rand_chacha = {workspace = true }
itertools ={workspace = true }